selector design for table cells. TODO detail scroller + error handling then done

--- a/JTWeatherProject/Base.lproj/Main.storyboard
+++ b/JTWeatherProject/Base.lproj/Main.storyboard
@@ -128,8 +128,21 @@
                                                 <outlet property="delegate" destination="cCw-JS-saz" id="pI8-wq-Bpp"/>
                                             </connections>
                                         </tableView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Monday" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="iE4-gH-H5P">
+                                            <rect key="frame" x="8" y="237" width="264" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="36" id="FC8-c0-Iuc"/>
+                                                <constraint firstAttribute="width" constant="264" id="cJ4-h7-8EX"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="29"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mrb-Vo-4zK">
+                                            <rect key="frame" x="0.0" y="96" width="600" height="128"/>
+                                        </scrollView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6MY-5R-ejW">
-                                            <rect key="frame" x="543" y="20" width="49" height="30"/>
+                                            <rect key="frame" x="543" y="31" width="49" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="49" id="l7z-s8-2qQ"/>
                                                 <constraint firstAttribute="height" constant="30" id="x49-wS-Kfx"/>
@@ -142,18 +155,8 @@
                                                 <action selector="closeOverlayPressed:" destination="cCw-JS-saz" eventType="touchUpInside" id="RMb-Nt-RHR"/>
                                             </connections>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Monday" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="iE4-gH-H5P">
-                                            <rect key="frame" x="8" y="237" width="264" height="36"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="36" id="FC8-c0-Iuc"/>
-                                                <constraint firstAttribute="width" constant="264" id="cJ4-h7-8EX"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="29"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swindon, GB" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="4Wm-W0-wt6">
-                                            <rect key="frame" x="8" y="20" width="264" height="36"/>
+                                            <rect key="frame" x="8" y="31" width="264" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="36" id="M6C-Zb-hsd"/>
                                             </constraints>
@@ -161,9 +164,6 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mrb-Vo-4zK">
-                                            <rect key="frame" x="0.0" y="83" width="600" height="128"/>
-                                        </scrollView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="mrb-Vo-4zK" firstAttribute="trailing" secondItem="ogO-hn-j9X" secondAttribute="trailing" id="3wv-ZT-afE"/>
@@ -171,23 +171,24 @@
                                         <constraint firstItem="4Wm-W0-wt6" firstAttribute="leading" secondItem="iE4-gH-H5P" secondAttribute="leading" id="AoT-Vh-vTZ"/>
                                         <constraint firstItem="ogO-hn-j9X" firstAttribute="top" secondItem="iE4-gH-H5P" secondAttribute="bottom" constant="34" id="S7G-aY-tRx"/>
                                         <constraint firstItem="ogO-hn-j9X" firstAttribute="top" secondItem="iE4-gH-H5P" secondAttribute="bottom" constant="34" id="T7D-my-APb"/>
-                                        <constraint firstItem="6MY-5R-ejW" firstAttribute="top" secondItem="ThB-nt-Ru5" secondAttribute="topMargin" constant="12" id="TVC-N6-E4A"/>
+                                        <constraint firstItem="6MY-5R-ejW" firstAttribute="top" secondItem="ThB-nt-Ru5" secondAttribute="topMargin" constant="23" id="TVC-N6-E4A"/>
                                         <constraint firstItem="iE4-gH-H5P" firstAttribute="top" secondItem="ThB-nt-Ru5" secondAttribute="top" constant="237" id="V11-n9-pz5"/>
                                         <constraint firstItem="4Wm-W0-wt6" firstAttribute="top" secondItem="6MY-5R-ejW" secondAttribute="top" id="WDV-DK-AOE"/>
                                         <constraint firstItem="6MY-5R-ejW" firstAttribute="trailing" secondItem="ThB-nt-Ru5" secondAttribute="trailingMargin" id="aCW-g3-TJX"/>
                                         <constraint firstItem="4Wm-W0-wt6" firstAttribute="trailing" secondItem="iE4-gH-H5P" secondAttribute="trailing" id="cpU-Zd-85A"/>
                                         <constraint firstAttribute="bottom" secondItem="ogO-hn-j9X" secondAttribute="bottom" id="ena-Of-bdn"/>
                                         <constraint firstAttribute="trailing" secondItem="ogO-hn-j9X" secondAttribute="trailing" id="ffc-NC-ZpA"/>
-                                        <constraint firstItem="mrb-Vo-4zK" firstAttribute="top" secondItem="4Wm-W0-wt6" secondAttribute="bottom" constant="27" id="lBF-gh-rg0"/>
+                                        <constraint firstItem="mrb-Vo-4zK" firstAttribute="top" secondItem="4Wm-W0-wt6" secondAttribute="bottom" constant="29" id="lBF-gh-rg0"/>
                                         <constraint firstItem="iE4-gH-H5P" firstAttribute="leading" secondItem="ThB-nt-Ru5" secondAttribute="leadingMargin" id="lRD-Wd-OBS"/>
                                         <constraint firstItem="mrb-Vo-4zK" firstAttribute="leading" secondItem="ogO-hn-j9X" secondAttribute="leading" id="nSO-3D-YGP"/>
-                                        <constraint firstItem="iE4-gH-H5P" firstAttribute="top" secondItem="mrb-Vo-4zK" secondAttribute="bottom" constant="26" id="vG5-Kp-agS"/>
+                                        <constraint firstItem="iE4-gH-H5P" firstAttribute="top" secondItem="mrb-Vo-4zK" secondAttribute="bottom" constant="13" id="vG5-Kp-agS"/>
                                     </constraints>
                                 </view>
                                 <blurEffect style="dark"/>
                                 <connections>
                                     <outlet property="dailyForecastTable" destination="ogO-hn-j9X" id="Ss8-SI-StG"/>
                                     <outlet property="dayLabel" destination="iE4-gH-H5P" id="Ogp-05-0GA"/>
+                                    <outlet property="detailScroll" destination="mrb-Vo-4zK" id="g2s-8R-1kP"/>
                                     <outlet property="locationLabel" destination="4Wm-W0-wt6" id="bmt-gp-l9k"/>
                                 </connections>
                             </visualEffectView>
